# termchan

./: .gitignore  README.md  art.txt  pyproject.toml
termchan/: __init__.py  __main__.py  api.py  app.py  config.py  html_parser.py  image.py  models.py
termchan/screens/: __init__.py  board_select.py  catalog.py  splash.py  thread_view.py
tests/: test_api.py  test_html_parser.py  test_image.py  test_models.py
